test/asm/foreach.err
ERROR: foreach.asm(8):
    FOREACH cannot have a step value of 0
error: Assembly aborted (1 errors)!
